--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,33 @@ body {
   border-radius: 2px;
 }
 
+.container-modal-add-task {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background-color: white;
+  border: 2px solid black;
+  z-index: 100;
+  height: 300px;
+  width: 500px;
+}
+
+.mask {
+  background-color: rgba(0, 0, 0, 0.75);
+  display: none;
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 50;
+}
+
+.show {
+  display: block;
+}
+
 .task-box-title {
   margin: 18px 0px 0px 0px;
 }
@@ -55,9 +82,9 @@ body {
   margin: 0px;
 }
 
-.container-task-list {
+/* .container-task-list {
   flex-direction: column;
-}
+} */
 
 .container-tasks {
   display: flex;
@@ -79,8 +106,7 @@ body {
 }
 
 .container-task-counter,
-.account-button,
-.img-logo {
+.account-button {
   display: none;
 }
 
@@ -88,21 +114,41 @@ body {
   .top-bar {
     display: flex;
     justify-content: space-between;
-    background-color: lightgray;
+    background-color: black;
+    height: 75px;
   }
 
   .menu-item {
     list-style-type: none;
     display: flex;
+    align-content: center;
+    align-items: center;
+    margin: 0px;
+    padding: 0px;
   }
 
+  .container-task-counter {
+    display: block;
+    align-items: center;
+    display: flex;
+    align-items: center;
+    background-color: #4b5320;
+    margin: 20px;
+    border-radius: 2px;
+  }
+  .logo-text {
+    margin: 15px;
+    display: flex;
+    align-items: center;
+  }
   .menu-left-button {
     /* padding: 20px 0px; */
-    margin: 0px 10px;
+    margin: 10px 10px;
     padding: 10px;
-    border: 2px solid black;
+    border: 2px solid lightgray;
     border-radius: 5px;
     box-shadow: 0px 1px gray;
+    background-color: gray;
   }
 
   .menu-left-button:hover {
@@ -111,8 +157,10 @@ body {
   }
 
   .counter-list {
-    padding: 0px 10px;
     visibility: visible;
+    padding: 5px 10px;
+    margin: 10px;
+    border-radius: 5px;
   }
 
   .counter-list:before {
@@ -123,17 +171,16 @@ body {
   .container-logo-account {
     display: flex;
     align-content: center;
-    padding: 20px;
-    justify-content: space-between;
-  }
-
-  .img-logo {
-    height: 30px;
-    width: 50px;
+    align-items: center;
   }
 
   .account-button {
-    visibility: visible;
+    display: block;
+    text-decoration: none;
+    color: white;
+    align-content: center;
+    display: flex;
+    padding: 0px 20px 0px 0px;
   }
 
   .container-master-task-grid {
@@ -154,6 +201,9 @@ body {
     margin: 0px 0px;
   }
 
+  .task-list-hr {
+    display: none;
+  }
   .container-do-now {
     background-color: pink;
     border: 5px solid red;
