--- a/css/main.css
+++ b/css/main.css
@@ -48,15 +48,28 @@ body {
 }
 
 .container-modal-add-task {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+}
+
+.content-modal-add-task {
   display: none;
-  position: fixed;
+  position: absolute;
   top: 50%;
   left: 50%;
   background-color: white;
   border: 2px solid black;
   z-index: 100;
-  height: 300px;
-  width: 500px;
+  height: 200px;
+  width: 300px;
+  transform: translate(-50%, -50%);
+  padding: 10px 20px;
+}
+
+.modal-form {
+  display: flex;
+  flex-direction: column;
 }
 
 .mask {
