--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,7 @@ body {
 
 .top-bar {
   display: flex;
+  justify-content: space-between;
 }
 
 .container-actions {
@@ -41,10 +42,28 @@ body {
   align-content: center;
 }
 .menu-left-button {
-  padding: 0px 5px;
-  margin: 0px 5px;
+  padding: 5px 10px;
+  margin: 10px;
+  border-radius: 5px;
   border: 1px solid black;
-  border-radius: 2px;
+  background-color: #4b5320;
+  color: white;
+  justify-content: center;
+  align-content: center;
+}
+
+.container-account {
+  padding: 5px 10px;
+  margin: 10px;
+}
+
+.account-button {
+  text-decoration: none;
+  color: #4b5320;
+}
+
+.menu-account {
+  display: none;
 }
 
 .container-modal-add-task {
@@ -83,6 +102,11 @@ body {
   z-index: 50;
 }
 
+.form-buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .show {
   display: block;
 }
@@ -94,10 +118,6 @@ body {
 .task-list-hr {
   margin: 0px;
 }
-
-/* .container-task-list {
-  flex-direction: column;
-} */
 
 .container-tasks {
   display: flex;
@@ -116,11 +136,6 @@ body {
 
 .task-text {
   margin: 0px;
-}
-
-.container-task-counter,
-.account-button {
-  display: none;
 }
 
 @media screen and (min-width: 480px) {
@@ -181,7 +196,7 @@ body {
     margin-right: 4px;
   }
 
-  .container-logo-account {
+  .container-account {
     display: flex;
     align-content: center;
     align-items: center;
